--- a/huffman.vcxproj
+++ b/huffman.vcxproj
@@ -23,7 +23,7 @@
     <ClInclude Include="include\fileio.h" />
     <ClInclude Include="include\heap.h" />
     <ClInclude Include="include\huffman.h" />
-    <ClInclude Include="include\locate.h" />
+    <ClInclude Include="include\utilities.h" />
     <ClInclude Include="include\pqueue.h" />
   </ItemGroup>
   <ItemGroup>
