--- a/huffman.vcxproj.filters
+++ b/huffman.vcxproj.filters
@@ -33,12 +33,12 @@
     <ClInclude Include="include\utilities.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\compdcomp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\huffman.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
