modified:   include/fileio.h 	new file:   tests/heap.cpp 	modified:   tests/main.cpp 	renamed:    tests/test.cpp -> tests/misc.cpp 	new file:   tests/pqueue.cpp 	modified:   tests/tests.vcxproj 	modified:   tests/tests.vcxproj.filters

--- a/tests/tests.vcxproj.filters
+++ b/tests/tests.vcxproj.filters
@@ -45,10 +45,16 @@
     <ClCompile Include="googletest\src\gtest-typed-test.cc">
       <Filter>Source Files\gtest</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="pqueue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="misc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="heap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
