--- a/huffman.vcxproj
+++ b/huffman.vcxproj
@@ -21,8 +21,8 @@
   <ItemGroup>
     <ClInclude Include="include\bintree.h" />
     <ClInclude Include="include\bitops.h" />
+    <ClInclude Include="include\custom.h" />
     <ClInclude Include="include\fileio.h" />
-    <ClInclude Include="include\huffman.h" />
     <ClInclude Include="include\utilities.h" />
     <ClInclude Include="include\pqueue.h" />
   </ItemGroup>
