--- a/tests/tests.vcxproj
+++ b/tests/tests.vcxproj
@@ -174,6 +174,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bintree.cpp" />
+    <ClCompile Include="bitops.cpp" />
+    <ClCompile Include="fileio.cpp" />
     <ClCompile Include="googletest\src\gtest-assertion-result.cc" />
     <ClCompile Include="googletest\src\gtest-death-test.cc" />
     <ClCompile Include="googletest\src\gtest-filepath.cc" />
@@ -185,7 +187,7 @@
     <ClCompile Include="googletest\src\gtest.cc" />
     <ClCompile Include="custom.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="misc.cpp" />
+    <ClCompile Include="utilities.cpp" />
     <ClCompile Include="pqueue.cpp" />
   </ItemGroup>
   <ItemGroup>
